<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.unknown.travistutorial.TabWidgetHost">

    <TabHost
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tabHost"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

         <HorizontalScrollView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:fillViewport="true"
             android:scrollbars="none"
             android:scrollbarStyle="outsideOverlay"
             android:scrollbarAlwaysDrawHorizontalTrack="true"
             android:scrollbarTrackVertical="@mipmap/first6">
            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TabWidget>
         </HorizontalScrollView>
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >


                    <DigitalClock
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/digi"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <AnalogClock
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ana"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etWeb"
                        android:hint="@string/enter_url"/>
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:weightSum="8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Reload"
                        android:layout_weight="2"
                        android:text="@string/reload"/>
                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Back"
                        android:layout_weight="2"
                        android:text="@string/back"/>
                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Forward"
                        android:layout_weight="2"
                        android:text="@string/frwrd"/>
                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/Load"
                        android:layout_weight="2"
                        android:text="@string/load"/>
                    </LinearLayout>


                    <WebView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/webview"></WebView>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>
